# wasti

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.46F089E90B956416.idx  mainWindow.cpp.339E0B391BC37B84.idx
resources/: qml.qrc
src/: main.cpp
ui/qml/: LoginPage.qml  main.qml
